--- a/europe.html
+++ b/europe.html
@@ -35,6 +35,7 @@
 </nav>
 </div>
 
+<div class="container">
   <a name="Europe Intro"></a>
   <br/><br/>
   <h3>Ciao! Guten Tag! Zdravo!</h3></a>
@@ -60,7 +61,7 @@
         We didn't mind because it was brutally hot that July and we needed 2-double scoop gelatos a day in order to stay cool.</p>
 
         <p>The highlight of Croatia was cliff diving on the beautiful island of Lokrum. Here is a video showing just how crazy I was!
-        <center><iframe src="https://www.youtube.com/embed/HHYbJv6rWqc" width=300 height=231 frameborder="0" allowfullscreen></iframe></p></center>
+        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/HHYbJv6rWqc" frameborder="0" allowfullscreen></iframe></p></center>
     </div>
 
     <div class="col-sm-6">
@@ -90,11 +91,11 @@
         We spent New Year's in Florence near the <a class="btn btn-primary btn-xs"href="http://www.visitflorence.com/florence-monuments/piazzale-michelangelo.html"target="_blank"role="button">Michaelangelo statue</a>, carrying a bottle of champagne in the streets along with thousands of others.
         It was awesome! I wasn't even 21 yet! But it was perfectly legal in Italy.</p>
 
-        <p>Here is one of my favorite memories in Rome, throwing a penny into the ancient Trevi fountain
+        <p>Here is one of my favorite memories in Rome, throwing a penny into the ancient Trevi fountain.
           <center><img src="trevi.jpg" class="img-responsive" alt="Responsive image"></p></center>
       </div>
     </div>
-
+  </div>
 
 <!-- Footer -->
 
