--- a/future.html
+++ b/future.html
@@ -1,14 +1,13 @@
 <!DOCtype html>
 <html>
   <head>
-    <title>Welcome to Stephanie Explores Earth</title>
+    <title>Where Will Stephanie Explore Next?</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
-    <body bgcolor="#b3ffeb">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
@@ -17,7 +16,7 @@
     <div class="header">
       <br/><br/>
           <img src="future.gif" class="img-responsive" alt="Responsive image">
-          <h1>Stephanie Explores Earth</h1>
+          <h1>Where in the World Will Stephanie Explore Next?</h1>
           <h2>My Adventure Travel Blog</h2>
     </center>
     </div>
@@ -36,16 +35,14 @@
 </nav>
 </div>
 
-  <a name="Welcome"></a>
+<div class="container">
+  <a name="Future Intro"></a>
   <br/><br/>
   <h3>Welcome!</h3></a>
   <p>
-    Thanks for visiting my blog!
-    Here I will document some of my amazing travels across the globe.
-    I have visited 2 continents, 14 countries and 22 US states.
-    Below, you will find some of my favorite memories, sorted by most recent first.
-    My husband Frank is my favorite travel partner, so you will definitely see mention of him.
-    Enjoy!
+    One thing is for sure: I have a chronic case of the travel bug.
+    I am always planning my next trip, and have identified plenty of countries I'd like to visit one day.
+    Below I will highlight the 2 places of the world that we firmly plan on visiting in 2016!
   </p>
 
     <div class="alert alert-info" role="alert">NOTE: Clicking a link button will open the page in a new tab.</div>
@@ -53,77 +50,36 @@
 
   <div class="row">
     <div class="col-sm-6">
-      <a name="YS"></a>
-        <br/><br/>
-      <h3>Yellowstone National Park</h3>
+      <a name="Cruise 2016"></a>
+      <br/><br/>
+      <h3>Carnival Cruise - Cozumel & Grand Cayman...AGAIN!</h3>
       <p>
-        In September 2015, we took the road trip of a lifetime out to <a class="btn btn-primary btn-xs"href="http://www.nps.gov/yell/index.htm"target="_blank"role="button">Yellowstone National Park</a> in western Wyoming.
-        We left a piece of our hearts there; it is truly a special place, and we hope to visit it again some day.
-        This picture was taken while visiting Grand Canyon of the Yellowstone, one of many spectacular sites we saw!<br/>
-          <img src="YS.jpg"class="img-responsive" alt="Responsive image">
-      </p><br/>
+        In March 2016, during my spring break from school, Frank, my brother Nic, and I will be going on yet another Carnival cruise!
+        For Frank and I, this is our 4th cruise together, while for Nic, it's his first time outside of the country!
+        We plan on driving down to Florida to get a road trip experience as well.
+        While on the cruise, we plan on doing a certified shipwreck dive in Grand Cayman, our very first <a class="https://en.wikipedia.org/wiki/Wreck_diving"target="_blank" role="button">wreck dive</a>. We are so pumped!
+        In Cozumel, we're going to take my brother on a Discover Scuba excursion, so he can experience the wonders of the deep for the first time.
+        I know he is also very excited to put his first passport to use!
+        <br/><center><iframe width="560" height="315" src="https://www.youtube.com/embed/eeh0F-mdWZA" frameborder="0" allowfullscreen></iframe></center>
+      </p>
     </div>
 
     <div class="col-sm-6">
-      <a name="Cruise"></a>
-      <br/><br/>
-      <h3>Carnival Cruise - Turks & Caicos and the Bahamas</h3>
-      <p>
-        Frank and I love cruising! In May 2014, we took our third cruise together, to celebrate our 1-year wedding anniversary.
-        We became scuba certified on this trip, since we love diving, and wanted to go deeper than ever before.
-        We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive feautring a wall of coral that drops down 7,000 feet.
-        Fortunately, we only dove to 90 feet, which was plenty of excitement for us!
-        We saw nurse sharks, sea turtles, baracudas, and plenty of colorful fish and coral.<br/>
-          <img src="Scuba.jpg"class="img-responsive" alt="Responsive image">
-      </p><br/>
-    </div>
-  </div>
-
-      <a name="Hawaii"></a>
-      <br/><br/>
-      <h3>Hawaii - Our Honeymoon on Maui and Kauai</h3>
-      <p>
-        We had both never been to Hawaii before, so it was an easy choice when deciding where to Honeymoon.
-        Two days after our wedding in May 2013, we departed for 2 weeks on Maui and Kauai.
-        We did more adventure activity on Maui, and more relaxation on Kauai, which was a perfect balance for a perfect trip.
-        It is a very special place, and Chicago could use some serious Aloha!
-        <div class="row">
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are at a sunset dinner on Maui at the <a class="btn btn-primary btn-xs" href="http://www.fourseasons.com/maui/dining/restaurants/ferraros_bar_e_ristorante"target="_blank" role="button">Four Seasons</a>.
-                It was so perfect!
-                I will never forget it.</li></ul><br/>
-                <img src="Maui.jpg"class="img-responsive" alt="Responsive image"><br/><br/>
-          </div>
-          <div class="col-sm-6">
-            <ul>
-              <li>Here we are exploring the famous <a class="btn btn-primary btn-xs" href="http://www.napali.com/coast/"target="_blank"role="button">Napali Coast</a> by boat on Kauai.
-                It was the last night of our Honeymoon before heading back to Chicago.
-                After all this beauty, we sure could have used one more day!</li></ul>
-              <img src="Kauai.jpg"class="img-responsive" alt="Responsive image">
-            </p><br/>
-          </div>
-        </div>
-
-  <div class="row">
-    <div class="col-sm-12">
-      <a name="Future"></a>
-      <br/><br/>
-      <h3>What's next?</h3>
+      <a name="Maine"></a>
+        <br/><br/>
+      <h3>Maine</h3>
       <p>
         Our next stop? We hope to visit Portland, Maine in Fall 2016!
         We have recenly become curious about this mysterious state, and exploring nature there.
         Perhaps we'll go white water rafting too!<br/>
-  </p>
-
-    <center>
-      <iframe src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" width=350 height=250 allowfullscreen></iframe>
-    </center><br/><br/><br/><br/>
+      </p>
+      <center><iframe width="560" height="315" src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" allowfullscreen></iframe></center>
+      </p><br/>
+    </div>
   </div>
-  </div>
-
+</div>
 <!-- Footer -->
 
-  <p>Last updated: January 18, 2016</p>
+  <p>Last updated: February 10, 2016</p>
  </body>
 </html>
