--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
-    <body bgcolor="#b3ffeb">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
@@ -36,6 +35,7 @@
 </nav>
 </div>
 
+<div class="container">
   <a name="Welcome"></a>
   <br/><br/>
   <h3>Welcome!</h3></a>
@@ -47,7 +47,7 @@
     My husband Frank is my favorite travel partner, so you will definitely see mention of him.
     Enjoy!
   </p>
-
+</div>
 <!-- Footer -->
 
   <p>Last updated: February 10, 2016</p>
