--- a/caribbean.html
+++ b/caribbean.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
-    <body bgcolor="#b3ffeb">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
@@ -77,7 +76,7 @@
         My favorite memory from this cruise was swinging from a rope off of a pirate ship into the ocean in Barbados.
         It was a <a class="btn btn-primary btn-xs" href="http://www.funbarbados.com/tours/jollyroger.cfm"target="_blank" role="button">Jolly Roger 1 tour</a></p><br/>
         Here is a quick video of some friendly rooster chicks on Tortola.
-        <center><iframe src="https://www.youtube.com/embed/KnlUtZz6BQ4" width=300 height=231 frameborder="0" allowfullscreen></iframe></center>
+        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe></center>
     </div>
   </div>
 
