--- a/caribbean.html
+++ b/caribbean.html
@@ -71,14 +71,19 @@
       <br/><br/>
       <h3>Princess Cruise 2012 - St. Thomas, Barbados, Antigua, Tortola</h3>
       <p>
-        In January 2012, we took our second cruise together, which Frank's family.
+        In January 2012, we took our second cruise together, with Frank's family.
         We dove in St. Thomas, and did a beach day in Antigua.
-        My favorite memory from this cruise was swinging from a rope off of a pirate ship into the ocean in Barbados.
-        It was a <a class="btn btn-primary btn-xs" href="http://www.funbarbados.com/tours/jollyroger.cfm"target="_blank" role="button">Jolly Roger 1 tour</a></p><br/>
-        Here is a quick video of some friendly rooster chicks on Tortola.
-        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe></center>
+        My favorite memory on this cruise was in Barbados when we were swinging from a rope off of a pirate ship into the ocean.
+        It was an awesome <a class="btn btn-primary btn-xs" href="http://www.funbarbados.com/tours/jollyroger.cfm"target="_blank" role="button">Jolly Roger 1 tour</a>, and I wish I would have purchased the video they offered.
+        By taking this Princess cruise, we realized just how much we appreciate the Carnival Cruise Line philosophy.
+        It was fun, but hey, there's a reason why Carnival is called the "Fun Ship."</p>
+
+        <p>Here is a quick video of some friendly rooster chicks on Tortola.
+        <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KnlUtZz6BQ4" frameborder="0" allowfullscreen></iframe></center></p></div>
     </div>
   </div>
+
+
 
   <div class="container">
     <div class="row">
