--- a/europe.html
+++ b/europe.html
@@ -61,7 +61,7 @@
         We didn't mind because it was brutally hot that July and we needed 2-double scoop gelatos a day in order to stay cool.</p>
 
         <p>The highlight of Croatia was cliff diving on the beautiful island of Lokrum. Here is a video showing just how crazy I was!
-        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/HHYbJv6rWqc" frameborder="0" allowfullscreen></iframe></p></center>
+        <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item"src="https://www.youtube.com/embed/HHYbJv6rWqc" frameborder="0" allowfullscreen></iframe></p></center></div>
     </div>
 
     <div class="col-sm-6">
