--- a/future.html
+++ b/future.html
@@ -60,7 +60,7 @@
         While on the cruise, we plan on doing a certified shipwreck dive in Grand Cayman, our very first <a class="https://en.wikipedia.org/wiki/Wreck_diving"target="_blank" role="button">wreck dive</a>. We are so pumped!
         In Cozumel, we're going to take my brother on a Discover Scuba excursion, so he can experience the wonders of the deep for the first time.
         I know he is also very excited to put his first passport to use!
-        <br/><center><iframe width="560" height="315" src="https://www.youtube.com/embed/eeh0F-mdWZA" frameborder="0" allowfullscreen></iframe></center>
+        <br/><center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eeh0F-mdWZA" frameborder="0" allowfullscreen></iframe></center></div>
       </p>
     </div>
 
@@ -73,7 +73,7 @@
         We have recenly become curious about this mysterious state, and exploring nature there.
         Perhaps we'll go white water rafting too!<br/>
       </p>
-      <center><iframe width="560" height="315" src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" allowfullscreen></iframe></center>
+      <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" allowfullscreen></iframe></center></div>
       </p><br/>
     </div>
   </div>
