--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     Thanks for visiting my blog!
     Here I will document some of my amazing travels across the globe.
     I have visited 2 continents, 14 countries and 22 US states.
-    Below, you will find some of my favorite memories, sorted by most recent first.
+    Here you will find some of my favorite memories, sorted by geographic region.
     My husband Frank is my favorite travel partner, so you will definitely see mention of him.
     Enjoy!
   </p>
 </div>
+
 <!-- Footer -->
 
   <p>Last updated: February 10, 2016</p>
