go! edit family!

--- a/caribbean.html
+++ b/caribbean.html
@@ -41,7 +41,7 @@
   <h3>Aruba, Jamaica, ooh I wanna take ya!</h3></a>
   <p>
     There's something very special about the Caribbean.
-    Frank and I have visited 9 islands there: Cozumel, Grand Cayman, Jamaica, Turks & Caicos, Bahamas, St. Thomas, Antigua, Barbados, Tortola.
+    Frank and I have visited 9 islands there: Cozumel, Grand Cayman, Jamaica, Turks & Caicos, Bahamas, St. Thomas, Antigua, Barbados, and Tortola.
     Surprisingly, they are all very different, but have a common tropical theme.
     You can't grow tired of the islands, no matter how hard you try :-).
     We visited all of these islands by cruise. Cruises are such a great way to vacation!
@@ -83,8 +83,6 @@
     </div>
   </div>
 
-
-
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
@@ -93,7 +91,9 @@
       <h3>Carnival Cruise 2010 - Cozumel, Grand Cayman, Jamaica</h3>
       <p>
         In 2010, Frank and I went on our very first cruise together.
-        Carnival has been our favorite cruise line ever since.
+        Carnival has been our favorite cruise line ever since!
+        We made so many great memories on this cruise, including our very first beginner's dive, which then fueled our love for diving.
+        I also need to acknowledge that this cruise fueled my love for chocolate volcano cakes, which were abundantly available every night during dessert (or dinner, depending on how you look at it.) Cruising is the best!
         <br/><br/>
         Here we are climbing <a class="btn btn-primary btn-xs" href="http://www.dunnsriverfallsja.com/"target="_blank" role="button">Dunn's River Falls</a> in Ocho Rios, Jamaica. Such a fun day!</p>
         <center><img src="dunns.jpg" class="img-responsive" alt="responsive image"></center>
