--- a/europe.html
+++ b/europe.html
@@ -38,54 +38,58 @@
 <div class="container">
   <a name="Europe Intro"></a>
   <br/><br/>
-  <h3>Ciao! Guten Tag! Zdravo!</h3></a>
+  <h3>Guten Tag! Zdravo! Ciao!</h3></a>
   <p>
-    I have visited Europe twice, and seen 3 countries: Italy, Germany and Croatia!
+    I have visited Europe twice, and seen 3 countries: Italy, Croatia, and Germany!
     I truly enjoyed all 3 countries; it is hard to pick a favorite.
     They are all special for different reasons.
     I visited Italy in Winter 2008 and Germany/Croatia in Summer 2012.
   </p>
 
     <div class="alert alert-info" role="alert">NOTE: Clicking a link button will open the page in a new tab.</div>
+</div>
 
-
+<div class="container">
   <div class="row">
-    <div class="col-sm-6">
-      <a name="Croatia"></a>
-        <br/><br/>
-      <h3>Dubrovnik, Croatia</h3>
-      <p>
-        In Summer 2012, I traveled to Europe for the second time to visit my friend Ramina who was living in Berlin at the time.
-        During my visit, we took a 5-day trip to <a class="btn btn-primary btn-xs"href="http://wikitravel.org/en/Dubrovnik"target="_blank"role="button">Dubrovnik, Croatia</a>, a city that Ramina always wanted to visit, so I agreed to tag along.
-        And I'm so glad that I did. What a gorgeous city! We rented a little apartment against the hillside, and took a 30 minute walk downtown everyday.
-        We didn't mind because it was brutally hot that July and we needed 2-double scoop gelatos a day in order to stay cool.</p>
-
-        <p>The highlight of Croatia was cliff diving on the beautiful island of Lokrum. Here is a video showing just how crazy I was!
-        <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item"src="https://www.youtube.com/embed/HHYbJv6rWqc" frameborder="0" allowfullscreen></iframe></p></center></div>
-    </div>
-
     <div class="col-sm-6">
       <a name="Germany"></a>
       <br/><br/>
       <h3>Berlin, Germany</h3>
       <p>
         In Summer 2012, I traveled to Europe for the second time to visit my friend Ramina who was living in Berlin at the time.
-        Germany is such a cool country and Berlin <a class="btn btn-primary btn-xs"href="https://www.tripadvisor.com/Attractions-g187323-Activities-Berlin.html"target="_blank"role="button">Berlin</a>  was a very exciting city.
-        We visited plenty of World War II memorials, including Hitler's bunker! Also, seeing the Berlin Wall was a real treat.</p>
+        Germany is such a cool country and <a class="btn btn-primary btn-xs"href="https://www.tripadvisor.com/Attractions-g187323-Activities-Berlin.html"target="_blank"role="button">Berlin</a>  was a very exciting city.
+        We visited plenty of World War II memorials, including Hitler's bunker! Seeing the Berlin Wall was a real treat.
+        Overall, I was very impressed with the German people, particularly their discipline, hard-working nature, and good-heartedness.</p>
 
-        <p>Overall my favorite thing in Germany is the Biergarten, where I enjoyed many ice cold Berliners and people-watched.
+        <p>Overall, my favorite part about Germany are the Biergartens, where I enjoyed many ice cold Berliners and people-watched.
         <center><img src="berlin.jpg" class="img-responsive" alt="Responsive image"></center>
       </p><br/>
     </div>
-  </div>
 
+    <div class="col-sm-6">
+      <a name="Croatia"></a>
+        <br/><br/>
+      <h3>Dubrovnik, Croatia</h3>
+      <p>
+        While visiting Ramina in Berlin, we took a 5-day trip to <a class="btn btn-primary btn-xs"href="http://wikitravel.org/en/Dubrovnik"target="_blank"role="button">Dubrovnik, Croatia</a>, a city that Ramina had always wanted to visit, so I agreed to tag along.
+        And boy am I glad that I did. What a gorgeous city; easily one of my favorites in the whole world!
+        We rented a little apartment against the hillside, and took a 30 minute walk downtown (downhill) and back (uphill) everyday.
+        We didn't mind because it was brutally hot that July, and we needed 2 double scoop gelatos per day in order to stay cool. Come on...it was a matter of survival!</p>
+
+        <p>The highlight of Croatia was cliff diving on the beautiful island of Lokrum. Here is a video showing just how crazy we were!
+        <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item"src="https://www.youtube.com/embed/HHYbJv6rWqc" frameborder="0" allowfullscreen></iframe></p></center></div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
   <div class="row">
     <div class="col-sm-6">
       <a name="Italy"></a>
       <br/><br/>
       <h3>10 Cities in 10 Days: An Italian Voyage</h3>
       <p>During my junior year of college, my 2 close high school friends and I visited Italy through a college-student organized tour.
-        The itinerary said we'd visit 10 cities in 10 days, and that we did. In chronological order: Milan, Verona, Venice, Florence, Sienna, Assissi, Pompei, Sorrento, the Vatican, and Rome!
+        The itinerary said we'd visit 10 cities in 10 days, and that we did. In chronological order, we saw: Milan, Verona, Venice, Florence, Sienna, Assisi, Pompei, Sorrento, the Vatican, and Rome!
         What a nutty schedule it was, but it was so awesome to see the entire country in such a short and convenient way.
         My family roots are from Italy, so this was a very special trip for me.
         We spent New Year's in Florence near the <a class="btn btn-primary btn-xs"href="http://www.visitflorence.com/florence-monuments/piazzale-michelangelo.html"target="_blank"role="button">Michaelangelo statue</a>, carrying a bottle of champagne in the streets along with thousands of others.
@@ -96,9 +100,12 @@
       </div>
     </div>
   </div>
+</div>
 
 <!-- Footer -->
 
+<div class="container">
   <p>Last updated: February 10, 2016</p>
+</div>
  </body>
 </html>
