--- a/future.html
+++ b/future.html
@@ -46,8 +46,9 @@
   </p>
 
     <div class="alert alert-info" role="alert">NOTE: Clicking a link button will open the page in a new tab.</div>
+</div>
 
-
+<div class="container">
   <div class="row">
     <div class="col-sm-6">
       <a name="Cruise 2016"></a>
@@ -79,7 +80,8 @@
   </div>
 </div>
 <!-- Footer -->
-
+<div class="container">
   <p>Last updated: February 10, 2016</p>
+</div>
  </body>
 </html>
