--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p>
     Thanks for visiting my blog!
     Here I will document some of my amazing travels across the globe.
-    I have visited 2 continents, 14 countries and 22 US states.
+    I have visited 2 continents, 14 countries, and 22 US states.
     Here you will find some of my favorite memories, sorted by geographic region.
     My husband Frank is my favorite travel partner, so you will definitely see mention of him.
     Enjoy!
@@ -50,7 +50,8 @@
 </div>
 
 <!-- Footer -->
-
+<div class="container">
   <p>Last updated: February 10, 2016</p>
+</div>
  </body>
 </html>
