--- a/usa.html
+++ b/usa.html
@@ -41,7 +41,7 @@
   <h3>Seeking 50: Pursuing my dream of visiting every state!</h3></a>
   <p>
     I love the country where I was born, these great United States.
-    I have visited 22 US states, and hope to eventually see all 50 of them.
+    I have visited 22 US states and hope to eventually see all 50 of them.
     I feel particularly comfortable while traveling in my home country and am always quite relaxed on these trips.
   </p>
 
