--- a/future.html
+++ b/future.html
@@ -44,8 +44,6 @@
     I am always planning my next trip, and have identified plenty of countries I'd like to visit one day.
     Below I will highlight the 2 places of the world that we firmly plan on visiting in 2016!
   </p>
-
-    <div class="alert alert-info" role="alert">NOTE: Clicking a link button will open the page in a new tab.</div>
 </div>
 
 <div class="container">
@@ -70,9 +68,9 @@
         <br/><br/>
       <h3>Maine</h3>
       <p>
-        Our next stop? We hope to visit Portland, Maine in Fall 2016!
+        We hope to visit Maine in Fall 2016!
         We have recenly become curious about this mysterious state, and exploring nature there.
-        Perhaps we'll go white water rafting too!<br/>
+        Perhaps we'll go white water rafting too! I'd love to rent a little cabin upstate for most of the trip, but I'd also make sure to stop in Portland for a day.<br/>
       </p>
       <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" allowfullscreen></iframe></center></div>
       </p><br/>
