--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Visitor Feedback</title>
+    <title>Trip Recommendations</title>
     <script src="https://code.jquery.com/jquery-2.2.0.js" charset="utf-8"></script>
     <script src="todo.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -28,9 +28,9 @@
     <div class="container">
       <div class="page-header">
         <h1>
-          <br/> Visitor Feedback <br/>
+          <br/> Trip Recommendations: Where else should I go? <br/>
           <small><span class="total">0 comments</span></small>
-          <a class="btn btn-primary pull-right" href="#">Add Comment</a>
+          <a class="btn btn-primary pull-right" href="#">Add Recommendation</a>
         </h1>
       </div>
 
