--- a/caribbean.html
+++ b/caribbean.html
@@ -59,7 +59,7 @@
       <p>
         In May 2014, we took our third cruise together, to celebrate our 1-year wedding anniversary.
         We became scuba certified on this trip, since we love diving, and wanted to go deeper than ever before.
-        We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive feautring a wall of coral that drops down 7,000 feet.
+        We dove <a class="btn btn-primary btn-xs"href="http://www.carnival.com/shore-excursions/grand-turk/certified-scuba-440006#"target="_blank"role="button">"The Wall" in Turks & Caicos</a>, an exhilerating, world-renowned dive featuring a wall of coral that drops down 7,000 feet.
         Fortunately, we only dove to 90 feet, which was plenty of excitement for us!
         We saw nurse sharks, sea turtles, baracudas, and plenty of colorful fish and coral.<br/>
           <center><img src="Scuba.jpg"class="img-responsive" alt="Responsive image"></center>
