--- a/europe.html
+++ b/europe.html
@@ -61,7 +61,7 @@
         We visited plenty of World War II memorials, including Hitler's bunker! Seeing the Berlin Wall was a real treat.
         Overall, I was very impressed with the German people, particularly their discipline, hard-working nature, and good-heartedness.</p>
 
-        <p>Overall, my favorite part about Germany are the Biergartens, where I enjoyed many ice cold Berliners and people-watched.
+        <p>Germany's Biergartens are not to be missed! There, I enjoyed many ice cold Berliners among the tranquil scenery.
         <center><img src="berlin.jpg" class="img-responsive" alt="Responsive image"></center>
       </p><br/>
     </div>
@@ -95,8 +95,8 @@
         We spent New Year's in Florence near the <a class="btn btn-primary btn-xs"href="http://www.visitflorence.com/florence-monuments/piazzale-michelangelo.html"target="_blank"role="button">Michaelangelo statue</a>, carrying a bottle of champagne in the streets along with thousands of others.
         It was awesome! I wasn't even 21 yet! But it was perfectly legal in Italy.</p>
 
-        <p>Here is one of my favorite memories in Rome, throwing a penny into the ancient Trevi fountain.
-          <center><img src="trevi.jpg" class="img-responsive" alt="Responsive image"></p></center>
+        <p>Here is one of my favorite memories in Rome: throwing a penny into the ancient Trevi fountain.
+          <center><img src="Trevi.jpg" class="img-responsive" alt="Responsive image"></p></center>
       </div>
     </div>
   </div>
