--- a/future.html
+++ b/future.html
@@ -1,7 +1,7 @@
 <!DOCtype html>
 <html>
   <head>
-    <title>Where Will Stephanie Explore Next?</title>
+    <title>Stephanie's Future Travels</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
     <div class="header">
       <br/><br/>
           <img src="future.gif" class="img-responsive" alt="Responsive image">
-          <h1>Where in the World Will Stephanie Explore Next?</h1>
+          <h1>Stephanie's Future Travels</h1>
           <h2>My Adventure Travel Blog</h2>
     </center>
     </div>
@@ -56,7 +56,7 @@
         In March 2016, during my spring break from school, Frank, my brother Nic, and I will be going on yet another Carnival cruise!
         For Frank and I, this is our 4th cruise together, while for Nic, it's his first time outside of the country!
         We plan on driving down to Florida to get a road trip experience as well.
-        While on the cruise, we plan on doing a certified shipwreck dive in Grand Cayman, our very first <a class="https://en.wikipedia.org/wiki/Wreck_diving"target="_blank" role="button">wreck dive</a>. We are so pumped!
+        While on the cruise, we plan on doing a certified shipwreck dive in Grand Cayman, our very first <a class="btn btn-primary btn-xs"href="https://en.wikipedia.org/wiki/Wreck_diving"target="_blank" role="button">wreck dive</a>. We are so pumped!
         In Cozumel, we're going to take my brother on a Discover Scuba excursion, so he can experience the wonders of the deep for the first time.
         I know he is also very excited to put his first passport to use!
         <br/><center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eeh0F-mdWZA" frameborder="0" allowfullscreen></iframe></center></div>
@@ -69,7 +69,7 @@
       <h3>Maine</h3>
       <p>
         We hope to visit Maine in Fall 2016!
-        We have recenly become curious about this mysterious state, and exploring nature there.
+        We have recently become curious about this mysterious state, and exploring nature there.
         Perhaps we'll go white water rafting too! I'd love to rent a little cabin upstate for most of the trip, but I'd also make sure to stop in Portland for a day.<br/>
       </p>
       <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" allowfullscreen></iframe></center></div>
