new alert on homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="alert.js" charset="utf-8"></script>
   </head>
 
   <body>
