--- a/europe.html
+++ b/europe.html
@@ -88,7 +88,7 @@
       <a name="Italy"></a>
       <br/><br/>
       <h3>10 Cities in 10 Days: An Italian Voyage</h3>
-      <p>During my junior year of college, my 2 close high school friends and I visited Italy through a college-student organized tour.
+      <p>During my junior year of college, my best friends Ramina, Lisa and I visited Italy through a college-student organized tour.
         The itinerary said we'd visit 10 cities in 10 days, and that we did. In chronological order, we saw: Milan, Verona, Venice, Florence, Sienna, Assisi, Pompei, Sorrento, the Vatican, and Rome!
         What a nutty schedule it was, but it was so awesome to see the entire country in such a short and convenient way.
         My family roots are from Italy, so this was a very special trip for me.
