--- a/future.html
+++ b/future.html
@@ -41,7 +41,7 @@
   <h3>Welcome!</h3></a>
   <p>
     One thing is for sure: I have a chronic case of the travel bug.
-    I am always planning my next trip, and have identified plenty of countries I'd like to visit one day.
+    I am always planning my next trip, and have identified plenty of states and countries I'd like to visit one day.
     Below I will highlight the 2 places of the world that we firmly plan on visiting in 2016!
   </p>
 </div>
