--- a/future.html
+++ b/future.html
@@ -53,7 +53,7 @@
       <br/><br/>
       <h3>Carnival Cruise - Cozumel & Grand Cayman...AGAIN!</h3>
       <p>
-        In March 2016, during my spring break from school, Frank, my brother Nic, and I will be going on yet another Carnival cruise!
+        This spring, Frank, my brother Nic, and I will be going on yet another Carnival cruise!
         For Frank and I, this is our 4th cruise together, while for Nic, it's his first time outside of the country!
         We plan on driving down to Florida to get a road trip experience as well.
         While on the cruise, we plan on doing a certified shipwreck dive in Grand Cayman, our very first <a class="btn btn-primary btn-xs"href="https://en.wikipedia.org/wiki/Wreck_diving"target="_blank" role="button">wreck dive</a>. We are so pumped!
