--- a/europe.html
+++ b/europe.html
@@ -62,7 +62,7 @@
         Overall, I was very impressed with the German people, particularly their discipline, hard-working nature, and good-heartedness.</p>
 
         <p>Germany's Biergartens are not to be missed! There, I enjoyed many ice cold Berliners among the tranquil scenery.
-        <center><img src="berlin.jpg" class="img-responsive" alt="Responsive image"></center>
+        <center><img src="berlin2.jpg" class="img-responsive" alt="Responsive image"></center>
       </p><br/>
     </div>
 
