row centering and adjustments

--- a/caribbean.html
+++ b/caribbean.html
@@ -85,7 +85,6 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
       <a name="Cruise 2010"></a>
       <br/><br/>
       <h3>Carnival Cruise 2010 - Cozumel, Grand Cayman, Jamaica</h3>
@@ -97,7 +96,7 @@
         <br/><br/>
         Here we are climbing <a class="btn btn-primary btn-xs" href="http://www.dunnsriverfallsja.com/"target="_blank" role="button">Dunn's River Falls</a> in Ocho Rios, Jamaica. Such a fun day!</p>
         <center><img src="dunns.jpg" class="img-responsive" alt="responsive image"></center>
-    </div></div></div></div></div>
+    </div></div></div>
 
 
 <!-- Footer -->
