--- a/future.html
+++ b/future.html
@@ -48,7 +48,6 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-6">
       <a name="Cruise 2016"></a>
       <br/><br/>
       <h3>Carnival Cruise - Cozumel & Grand Cayman...AGAIN!</h3>
@@ -61,9 +60,8 @@
         I know he is also very excited to put his first passport to use!
         <br/><center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eeh0F-mdWZA" frameborder="0" allowfullscreen></iframe></center></div>
       </p>
-    </div>
 
-    <div class="col-sm-6">
+    <div class="row">
       <a name="Maine"></a>
         <br/><br/>
       <h3>Maine</h3>
@@ -75,8 +73,8 @@
       <center><div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5WfNeijoj3k" frameborder="0" allowfullscreen></iframe></center></div>
       </p><br/>
     </div>
-  </div>
 </div>
+
 <!-- Footer -->
 <div class="container">
   <p>Last updated: February 10, 2016</p>
